<resources>
    <string name="app_name">Course_Work</string>
    <string name="log_in">Ввійти</string>
    <string name="sign_up">Зареєструватися</string>
    <string name="user_name">Ім\'я користувача</string>
    <string name="login">Логін</string>
    <string name="title_activity_index">IndexActivity</string>
    <string name="password">Пароль</string>
    <string name="add_photo">Додайте ваше фото</string>
    <string name="preferences">Налаштування</string>
    <string name="add_new_course">Дадати новий курс</string>
    <string name="title">Назва курсу</string>
    <string name="Title">Назва: </string>
    <string name="Count">К-сть уроків: </string>
    <string name="Descr">Опис: </string>
    <string name="description">Опис</string>
    <string name="count_of_lessons"> Кількість уроків</string>
    <string name="save">Зберегти</string>
    <string name="not_found">________</string>
    <string name="add_new_les">Додати новий урок</string>
    <string name="title_of_les">Назва уроку:</string>
    <string name="theme_of_les">Тема:</string>
    <string name="link">Посилання на відео з YouTube</string>
    <string name="savecont">Зберегти і продовжити</string>
    <string name="lesson">Урок:</string>
    <string name="add_tests">Додати тестові питання:</string>
    <string name="test_number">Тест №</string>
    <string name="tests_text">Питання:</string>
    <string name="variants">Варіанти відповіді:</string>
    <string name="a">a)</string>
    <string name="b">b)</string>
    <string name="c">c)</string>
    <string name="d">d)</string>
    <string name="correct">Правильна відповідь:</string>
    <string name="all_courses">Всі курси</string>
    <string name="add">Додати</string>
    <string name="save_and_exit">Зберегти і закрити</string>
    <string name="look">Переглянути</string>
    <string name="add_lesson">Додати урок</string>
    <string name="enter_course_title">Введіть назву курсу</string>
    <string name="find">Знайти</string>
    <string name="start_learn">Почати вивчати</string>
</resources>
