<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="113dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="14dp"
        android:layout_marginRight="14dp"
        android:layout_marginBottom="356dp"
        android:layout_toStartOf="@+id/passwordEditText"
        android:layout_toLeftOf="@+id/passwordEditText"
        android:text="@string/password"
        android:textSize="17sp" />

    <EditText
        android:id="@+id/usernameEditText"
        android:layout_width="245dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="489dp"
        android:ems="10"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/loginEditText"
        android:layout_width="244dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="21dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="424dp"
        android:ems="10"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/passwordEditText"
        android:layout_width="241dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="22dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="355dp"
        android:ems="10"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/log_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="128dp"
        android:layout_marginRight="128dp"
        android:layout_marginBottom="274dp"
        android:text="@string/sign_up" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="113dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="14dp"
        android:layout_marginRight="14dp"
        android:layout_marginBottom="494dp"
        android:layout_toStartOf="@+id/usernameEditText"
        android:layout_toLeftOf="@+id/usernameEditText"
        android:text="@string/user_name"
        android:textSize="17sp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="113dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="14dp"
        android:layout_marginRight="14dp"
        android:layout_marginBottom="430dp"
        android:layout_toStartOf="@+id/loginEditText"
        android:layout_toLeftOf="@+id/loginEditText"
        android:text="@string/login"
        android:textSize="17sp" />

</RelativeLayout>